"Fixed" issues in IE by removing PIE.htc behaviour from critical places 1. iconbar hover effect lagged awfully behind 2. messages and boxes began to fall apart when an element styled by PIE.htc was scrolled out of the #content div This might be a bug in PIE.htc, need to check and report upstream, if so.
We are now back to edged uglyness without pretty box shadows, but usability has to be dominant until we find a proper fix
NOTE: border-radius.htc does not work on iconbar buttons, it totally messes them up!

--- a/webcit/static/styles/message.css
+++ b/webcit/static/styles/message.css
@@ -2,10 +2,15 @@
 	background-color: #deded0;
 	margin: 0.5em 1em;
 /*	border: 1px solid #5C646B; */
-	-webkit-box-shadow: #666 0px 1px 2px;
+	-webkit-box-shadow: #666 0px 2px 3px;
 	-moz-box-shadow: #666 0px 2px 3px;
 	box-shadow: #666 0px 2px 3px;
-	behavior: url(/static/styles/PIE.htc);
+/*	behavior: url(/static/styles/PIE.htc);*/
+}
+
+* .message {
+	border: 1px inset #666;
+	border-width: 1px 2px 3px 1px; 
 }
 
 .entmsg { height: 95%; }
